customer side modifications